--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository
+#This filelists all individuals having contributed content to the repository
 
-Joe <>
+Joe <jcmaglaw@gmail.com>
 Rose Wachuka <rosekaremeri@gmail.com>
